# fraud_detection

./: .gitignore  README.md  address.py  data_analysis.ipynb  docker-compose.yml  inspect_data.py  model.sav  pyproject.toml
consumer/: Dockerfile  fraud_detection_consumer.py  requirements.txt
producer/: Dockerfile  fraud_detection_producer.py
